--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@
                 <li><a href="">Security</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">About Us</a></li>
-                <li><form action=""></form></li>
+                <li class="search__form">
+                  <form action="" class="main_header__search">
+                    <input type="text" class="search__window" />
+                    <input
+                      type="submit"
+                      name=""
+                      value=""
+                      class="main_header__sersh_submit"
+                    />
+                  </form>
+                </li>
               </ul>
             </nav>
           </div>
@@ -96,8 +106,12 @@
                 </div>
                 <div class="main_slider__subitem">
                   <div class="main_slider__approw">
-                    <div class="main_slider__appitem"><a href="#"></a></div>
-                    <div class="main_slider__appitem"><a href="#"></a></div>
+                    <div class="main_slider__appitem">
+                      <a href="#" class="main_slider__appstore"></a>
+                    </div>
+                    <div class="main_slider__appitem">
+                      <a href="#" class="main_slider__playmarket"></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -128,7 +142,7 @@
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="benefits">
           <div class="benefits_slider">
             <div class="benefits_slider_item">
               <img src="./img/slider-img-1.jpg" alt="" class="slide_imag_1" />
