--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
             <li><a href="">Security</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">About Us</a></li>
+            <li>
+              <div class="burger_search__form">
+                <form action="" class="main_header__search">
+                  <input type="text" class="search__window" />
+                  <input
+                    type="submit"
+                    name=""
+                    value=""
+                    class="main_header__sersh_submit"
+                  />
+                </form>
+              </div>
+            </li>
           </ul>
         </nav>
         <div class="services__row">
