--- a/index.html
+++ b/index.html
@@ -11,28 +11,6 @@
   <body>
     <header>
       <div class="container">
-        <nav class="burger__menu">
-          <ul>
-            <li><a href="">Doctors&Institutions</a></li>
-            <li><a href="">Clinics&Professionals</a></li>
-            <li><a href="">Security</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">About Us</a></li>
-            <li>
-              <div class="burger_search__form">
-                <form action="" class="main_header__search">
-                  <input type="text" class="search__window" />
-                  <input
-                    type="submit"
-                    name=""
-                    value=""
-                    class="main_header__sersh_submit"
-                  />
-                </form>
-              </div>
-            </li>
-          </ul>
-        </nav>
         <div class="services__row">
           <div class="serveces__item social_link_1">
             <ul class="social_link_1_row">
@@ -100,7 +78,11 @@
             </div>
             <div class="search__form">
               <form action="" class="main_header__search">
-                <input type="text" class="search__window" />
+                <input
+                  placeholder="search..."
+                  type="text"
+                  class="search__window"
+                />
                 <input
                   type="submit"
                   name=""
@@ -115,7 +97,30 @@
           </div>
         </div>
       </div>
+      <nav class="burger__menu">
+        <ul>
+          <li><a href="">Doctors&Institutions</a></li>
+          <li><a href="">Clinics&Professionals</a></li>
+          <li><a href="">Security</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">About Us</a></li>
+          <li>
+            <div class="burger_search__form">
+              <form action="" class="main_header__search">
+                <input type="text" class="search__window" />
+                <input
+                  type="submit"
+                  name="submit"
+                  value=""
+                  class="main_header__sersh_submit"
+                />
+              </form>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </header>
+
     <main>
       <section class="main_screen">
         <div class="main_slider">
