--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>medbox</title>
   </head>
   <body>
+    <nav class="burger__menu">
+      <ul>
+        <li><a href="">Doctors&Institutions</a></li>
+        <li><a href="">Clinics&Professionals</a></li>
+        <li><a href="">Security</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">About Us</a></li>
+      </ul>
+    </nav>
     <header>
       <div class="container">
         <div class="services__row">
@@ -76,49 +85,26 @@
             <div class="menu__icon">
               <span></span>
             </div>
-            <div class="search__form">
-              <form action="" class="main_header__search">
-                <input
-                  placeholder="search..."
-                  type="text"
-                  class="search__window"
-                />
-                <input
-                  type="submit"
-                  name=""
-                  value=""
-                  class="main_header__sersh_submit"
-                />
-              </form>
-            </div>
+
+            <form action="" class="main_header__search">
+              <input
+                placeholder="search..."
+                type="text"
+                class="search__window"
+              />
+              <button
+                type="submit"
+                name="submit"
+                value=""
+                class="main_header__sersh_submit"
+              />
+            </form>
           </div>
           <div class="main_header__item">
             <button class="main_header__button">DOWNLOAD APP</button>
           </div>
         </div>
       </div>
-      <nav class="burger__menu">
-        <ul>
-          <li><a href="">Doctors&Institutions</a></li>
-          <li><a href="">Clinics&Professionals</a></li>
-          <li><a href="">Security</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">About Us</a></li>
-          <li>
-            <div class="burger_search__form">
-              <form action="" class="main_header__search">
-                <input type="text" class="search__window" />
-                <input
-                  type="submit"
-                  name="submit"
-                  value=""
-                  class="main_header__sersh_submit"
-                />
-              </form>
-            </div>
-          </li>
-        </ul>
-      </nav>
     </header>
 
     <main>
