--- a/index.html
+++ b/index.html
@@ -162,22 +162,22 @@
         <div class="benefits">
           <div class="benefits_slider">
             <div class="benefits_slider_item benefits_slider_item_1">
-              <img src="./img/slider-img-1.jpg" alt="" class="slide_imag_1" />
+              <img src="./img/slider-img-1.webp" alt="" class="slide_imag_1" />
               <h3>ANY DEVICE</h3>
               <p>Lorem ipsum dolor</p>
             </div>
             <div class="benefits_slider_item benefits_slider_item_2">
-              <img src="./img/slider-img-2.jpg" alt="" class="slide_imag_2" />
+              <img src="./img/slider-img-2.webp" alt="" class="slide_imag_2" />
               <h3>FAST LOG IN</h3>
               <p>Lorem ipsum dolor</p>
             </div>
             <div class="benefits_slider_item benefits_slider_item_3">
-              <img src="./img/slider-img-3.jpg" alt="" class="slide_imag_3" />
+              <img src="./img/slider-img-3.webp" alt="" class="slide_imag_3" />
               <h3>ALWAYS ONLINE</h3>
               <p>Lorem ipsum dolor</p>
             </div>
             <div class="benefits_slider_item benefits_slider_item_1">
-              <img src="./img/slider-img-1.jpg" alt="" class="slide_imag_1" />
+              <img src="./img/slider-img-1.webp" alt="" class="slide_imag_1" />
               <h3>ANY DEVICE</h3>
               <p>Lorem ipsum dolor</p>
             </div>
