--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <li><a href="">Blog</a></li>
         <li><a href="">About Us</a></li>
       </ul>
+      <form action="" class="burger__menu__search">
+        <input placeholder="search..." type="text" class="search__window" />
+        <button
+          type="submit"
+          name="submit"
+          value=""
+          class="burger__menu__sersh_submit"
+        />
+      </form>
     </nav>
     <header>
       <div class="container">
