--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="">Doctors&Institutions</a></li>
         <li><a href="">Clinics&Professionals</a></li>
         <li><a href="">Security</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="./blog.html">Blog</a></li>
         <li><a href="">About Us</a></li>
       </ul>
       <form action="" class="burger__menu__search">
@@ -86,7 +86,7 @@
                 <li><a href="">Doctors&Institutions</a></li>
                 <li><a href="">Clinics&Professionals</a></li>
                 <li><a href="">Security</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="">About Us</a></li>
               </ul>
             </nav>
@@ -428,7 +428,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
