--- a/blog.html
+++ b/blog.html
@@ -426,6 +426,6 @@
     <!-- Подключил слайдер Slick -->
     <script src="js/slick.min.js"></script>
     <!-- Подключил файл скриптов -->
-    <script src="js/script.js"></script>
+    <script src="./js/blog.js"></script>
   </body>
 </html>
