--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="">About Us</a></li>
       </ul>
       <form action="" class="burger__menu__search">
-        <input placeholder="search..." type="text" class="search__window" />
+        <input placeholder="Search..." type="text" class="search__window" />
         <button
           type="submit"
           name="submit"
@@ -221,6 +221,9 @@
       <section class="about_app">
         <div class="container">
           <div class="about_app__row">
+            <h2 class="about_app__title_column title">
+              How Does This APP Works?
+            </h2>
             <div class="about_app__item about_app__image">
               <img src="./img/iPhone.jpg" alt="" />
             </div>
