--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,7 @@
             </form>
           </div>
           <div class="main_header__item">
-            <button class="main_header__button">DOWNLOAD APP</button>
+            <a href="#" class="main_header__button">DOWNLOAD APP</a>
           </div>
         </div>
       </div>
@@ -189,14 +189,14 @@
         <div class="main_content__item main_content__general">
           <div class="general__row">
             <div class="main_content__block">
-              <a href="" class="main_content__image">
+              <a href="./post.html" class="main_content__image">
                 <img src="./img/blog_item.jpg" alt="" />
               </a>
               <div class="block__info">
                 <span class="block__catigory">culture</span
                 ><span class="block__date">Feb 20, 2021</span>
               </div>
-              <a href="" class="main_content__title">
+              <a href="./post.html" class="main_content__title">
                 What Is Video Remote Interpreting?
               </a>
               <p class="block__text">
