--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </form>
           </div>
           <div class="main_header__item">
-            <button class="main_header__button">DOWNLOAD APP</button>
+            <a href="#" class="main_header__button">DOWNLOAD APP</a>
           </div>
         </div>
       </div>
