--- a/post.html
+++ b/post.html
@@ -110,7 +110,7 @@
             </form>
           </div>
           <div class="main_header__item">
-            <button class="main_header__button">DOWNLOAD APP</button>
+            <a href="#" class="main_header__button">DOWNLOAD APP</a>
           </div>
         </div>
       </div>
@@ -191,56 +191,147 @@
         </div>
         <div class="main_content__item main_content__general">
           <div class="general__container">
-            <p class="general__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor
-              consequat id porta nibh venenatis. Ornare massa eget egestas purus
-              viverra accumsan in nisl. Dolor sed viverra ipsum nunc aliquet
-              bibendum enim facilisis gravida. Aliquam id diam maecenas
-              ultricies mi eget mauris pharetra et. Felis eget nunc lobortis
-              mattis aliquam faucibus. Egestas dui id ornare arcu. Porttitor
-              lacus luctus accumsan tortor. Tincidunt ornare massa eget egestas
-              purus. Ipsum dolor sit amet consectetur. Felis donec et odio
-              pellentesque diam volutpat. Sem integer vitae justo eget magna
-              fermentum iaculis. Ut tortor pretium viverra suspendisse potenti
-              nullam ac tortor vitae. Amet consectetur adipiscing elit ut
-              aliquam purus sit amet. Amet risus nullam eget felis eget nunc.
-              Nulla posuere sollicitudin aliquam ultrices sagittis orci. Libero
-              enim sed faucibus turpis in eu. Non enim praesent elementum
-              facilisis leo vel fringilla. Turpis massa sed elementum tempus
-              egestas sed sed risus pretium. Orci ac auctor augue mauris augue.
-              Purus in massa tempor nec feugiat. Ac tincidunt vitae semper quis
-              lectus nulla. Hac habitasse platea dictumst quisque sagittis purus
-              sit amet. Tristique magna sit amet purus. Rutrum quisque non
-              tellus orci ac auctor. Et magnis dis parturient montes nascetur
-              ridiculus. Nibh tortor id aliquet lectus proin nibh nisl
-              condimentum. Vitae sapien pellentesque habitant morbi tristique
-              senectus. Justo laoreet sit amet cursus sit amet. Egestas quis
-              ipsum suspendisse ultrices. Aliquam nulla facilisi cras fermentum
-              odio eu feugiat. Tellus mauris a diam maecenas sed enim ut. Nam
-              aliquam sem et tortor. Nunc eget lorem dolor sed viverra ipsum.
-              Elit eget gravida cum sociis natoque penatibus et magnis dis.
-              Proin libero nunc consequat interdum. Adipiscing diam donec
-              adipiscing tristique risus. Nibh sit amet commodo nulla facilisi
-              nullam vehicula.
-            </p>
-            <p class="general__quote">
-              Non enim praesent elementum facilisis leo vel fringilla. Turpis
-              massa sed elementum tempus egestas sed sed risus pretium. Orci ac
-              auctor augue mauris augue. Purus in massa tempor nec feugiat.
-            </p>
-            <p class="general__text">
-              Non enim praesent elementum facilisis leo vel fringilla. Turpis
-              massa sed elementum tempus egestas sed sed risus pretium. Orci ac
-              auctor augue mauris augue. Purus in massa tempor nec feugiat. Ac
-              tincidunt vitae semper quis lectus nulla.  Hac habitasse platea
-              dictumst quisque sagittis purus sit amet.
+            <div class="general__text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Tortor consequat id porta nibh venenatis. Ornare massa eget
+                egestas purus viverra accumsan in nisl. Dolor sed viverra ipsum
+                nunc aliquet bibendum enim facilisis gravida. Aliquam id diam
+                maecenas ultricies mi eget mauris pharetra et. Felis eget nunc
+                lobortis mattis aliquam faucibus. Egestas dui id ornare arcu.
+                Porttitor lacus luctus accumsan tortor. Tincidunt ornare massa
+                eget egestas purus. Ipsum dolor sit amet consectetur. Felis
+                donec et odio pellentesque diam volutpat. Sem integer vitae
+                justo eget magna fermentum iaculis. Ut tortor pretium viverra
+                suspendisse potenti nullam ac tortor vitae. Amet consectetur
+                adipiscing elit ut aliquam purus sit amet. Amet risus nullam
+                eget felis eget nunc. Nulla posuere sollicitudin aliquam
+                ultrices sagittis orci. Libero enim sed faucibus turpis in eu.
+              </p>
+
+              <p>
+                Non enim praesent elementum facilisis leo vel fringilla. Turpis
+                massa sed elementum tempus egestas sed sed risus pretium. Orci
+                ac auctor augue mauris augue. Purus in massa tempor nec feugiat.
+                Ac tincidunt vitae semper quis lectus nulla. Hac habitasse
+                platea dictumst quisque sagittis purus sit amet. Tristique magna
+                sit amet purus. Rutrum quisque non tellus orci ac auctor. Et
+                magnis dis parturient montes nascetur ridiculus. Nibh tortor id
+                aliquet lectus proin nibh nisl condimentum.
+              </p>
+              <p>
+                Vitae sapien pellentesque habitant morbi tristique senectus.
+                Justo laoreet sit amet cursus sit amet. Egestas quis ipsum
+                suspendisse ultrices. Aliquam nulla facilisi cras fermentum odio
+                eu feugiat. Tellus mauris a diam maecenas sed enim ut. Nam
+                aliquam sem et tortor. Nunc eget lorem dolor sed viverra ipsum.
+                Elit eget gravida cum sociis natoque penatibus et magnis dis.
+                Proin libero nunc consequat interdum. Adipiscing diam donec
+                adipiscing tristique risus. Nibh sit amet commodo nulla facilisi
+                nullam vehicula.
+              </p>
+              <p class="general__quote">
+                Non enim praesent elementum facilisis leo vel fringilla. Turpis
+                massa sed elementum tempus egestas sed sed risus pretium. Orci
+                ac auctor augue mauris augue. Purus in massa tempor nec feugiat.
+              </p>
+              <p>
+                Non enim praesent elementum facilisis leo vel fringilla. Turpis
+                massa sed elementum tempus egestas sed sed risus pretium. Orci
+                ac auctor augue mauris augue. Purus in massa tempor nec feugiat.
+                Ac tincidunt vitae semper quis lectus nulla.
+              </p>
+              <p>
+                Hac habitasse platea dictumst quisque sagittis purus sit amet.
+              </p>
               <span
-                >Hac habitasse platea dictumst quisque sagittis purus sit
-                amet</span
-              >
+                >Hac habitasse platea dictumst quisque sagittis purus sit amet
+                <br />
+              </span>
               <span>Dictumst quisque sagittis purus sit amet.</span>
-            </p>
+            </div>
+            <div class="general_link__row">
+              <div class="general_link__item">
+                <span>Get Link</span>
+              </div>
+              <div class="general_link__item">
+                <a href="" class="likedin"></a>
+              </div>
+              <div class="general_link__item">
+                <a href="" class="facebook"></a>
+              </div>
+              <div class="general_link__item">
+                <a href="" class="twitter"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="related_post">
+        <div class="container">
+          <h2 class="related_post__title">Check Related Posts</h2>
+          <div class="related_post__slider">
+            <div class="related_post__block">
+              <a href="./post.html" class="related_post__image">
+                <img src="./img/post-slide-1.jpg" alt="" />
+              </a>
+              <div class="block__info"></div>
+              <a href="./post.html" class="related_post__subtitle">
+                What Is Video Remote Interpreting?
+              </a>
+              <p class="block__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation.
+              </p>
+              <a href="#" class="learn_more">Learn More</a>
+            </div>
+            <div class="related_post__block">
+              <a href="./post.html" class="related_post__image">
+                <img src="./img/post-slide-2.jpg" alt="" />
+              </a>
+              <div class="block__info"></div>
+              <a href="./post.html" class="related_post__subtitle">
+                What Is Video Remote Interpreting?
+              </a>
+              <p class="block__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation.
+              </p>
+              <a href="#" class="learn_more">Learn More</a>
+            </div>
+            <div class="related_post__block">
+              <a href="./post.html" class="related_post__image">
+                <img src="./img/post-slide-3.jpg" alt="" />
+              </a>
+              <div class="block__info"></div>
+              <a href="./post.html" class="related_post__subtitle">
+                What Is Video Remote Interpreting?
+              </a>
+              <p class="block__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation.
+              </p>
+              <a href="#" class="learn_more">Learn More</a>
+            </div>
+            <div class="related_post__block">
+              <a href="./post.html" class="related_post__image">
+                <img src="./img/blog_item.jpg" alt="" />
+              </a>
+              <div class="block__info"></div>
+              <a href="./post.html" class="related_post__subtitle">
+                What Is Video Remote Interpreting?
+              </a>
+              <p class="block__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation.
+              </p>
+              <a href="#" class="learn_more">Learn More</a>
+            </div>
           </div>
         </div>
       </section>
