--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="">Clinics&Professionals</a></li>
         <li><a href="">Security</a></li>
         <li><a href="./blog.html">Blog</a></li>
-        <li><a href="">About Us</a></li>
+        <li><a href="./about.html">About Us</a></li>
       </ul>
       <form action="" class="burger__menu__search">
         <input placeholder="Search..." type="text" class="search__window" />
@@ -87,7 +87,7 @@
                 <li><a href="">Clinics&Professionals</a></li>
                 <li><a href="">Security</a></li>
                 <li><a href="./blog.html">Blog</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
               </ul>
             </nav>
 
@@ -429,7 +429,7 @@
               <h4>SITE MAP</h4>
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="#">Contact Us</a></li>
