--- a/about.html
+++ b/about.html
@@ -268,6 +268,11 @@
           </div>
         </div>
       </section>
+      <section class="map">
+        <div class="container">
+          <img src="./img/map.webp" alt="" />
+        </div>
+      </section>
       <section class="try">
         <div class="container">
           <h4 class="try__title">Let`s Try It Now</h4>
